# real-time-voice-ai

./: AGENTS.md  README.md  pyproject.toml
app/: __init__.py  config.py  evaluation.py  main.py  models.py  pipeline.py  session_store.py
app/providers/: base.py  mock.py
tests/: test_api.py  test_evaluation.py  test_pipeline.py
